2016-10-18 Riccardo Mottola <rm@gnu.org>

	* DBCSVWriter.h
	* DBCSVWriter.m
	* DBHTMLWriter.h
	* DBHTMLWriter.m
	Provide common writeStart and writeEnd method to write out the begin and end of a block, clean and complete table header ad rows generation.

2016-10-18 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m
	Use the property writeFieldsOrdered directly and do not try to reset it.

2016-06-27 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
        Use GSWS constants instead of hard-coded strings.

2016-06-24 Riccardo Mottola <rm@gnu.org>

	* DBSObject.m (_update)
	If value of a field is empty, consider it NULL and issue a fieldToNull

2016-06-13 Riccardo Mottola <rm@gnu.org>

	* DBSObject.h
        * DBSObject.m
        Implement storeValuesForFields to update several fields of a single object.

2016-06-13 Riccardo Mottola <rm@gnu.org>

	* DBSoap.h
        * DBSoap.m
        Bump API version to 37 and increase SOQL size limit 9000->18000 retaining some safety compared to 20000.

2016-05-27 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (_login)
        Actually read passwordExpired!

2016-04-27 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m
	Detect count() in query and complete progress.

2016-04-19 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	* DBSoap.h
	Getters for batch size.

	* DBSoapCSV.m
	Copy batch size when cloning DBSoap instance.

2016-04-11 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (_create)
        Handle multiple errors more gracefully.

2016-04-04 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (_update)
        Handle multiple errors more gracefully.

2016-03-16 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Fix correct result return type from query for insert and delete.

2016-02-16 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Look for ( when looking for aggregate operators only before from, ignoring thus IN(...)

2016-02-16 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Look for 'LIMIT ' including space to reduce risk of matching a field.
